rollback caching changes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,46 +13,22 @@ jobs:
       contents: read
       id-token: write # Required for AWS OIDC authentication
 
-    env:
-      ECR_REPOSITORY: screenshotapi
-      AWS_REGION: eu-central-1
-
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Log in to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
+          aws-region: eu-central-1
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v2
 
-      - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          platforms: linux/amd64
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Update Lambda function code and environment variables
+      - name: Run Deployment Script
+        run: ./deploy-working.sh 
         env:
-          API_KEY: ${{ secrets.SCREENSHOT_API_KEY }}
-          RAPIDAPI_PROXY_SECRET: ${{ secrets.RAPIDAPI_PROXY_SECRET }}
-        run: |
-          aws lambda update-function-code --function-name ${{ env.ECR_REPOSITORY }} --image-uri ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
-          echo "Waiting for function code to update..."
-          aws lambda wait function-updated --function-name ${{ env.ECR_REPOSITORY }}
-          echo "Updating function configuration with environment variables..."
-          aws lambda update-function-configuration --function-name ${{ env.ECR_REPOSITORY }} --environment "Variables={API_KEY=${{ env.API_KEY }},RAPIDAPI_PROXY_SECRET=${{ env.RAPIDAPI_PROXY_SECRET }}}" 
+          API_KEY: ${{ secrets.SCREENSHOT_API_KEY }} 
+          RAPIDAPI_PROXY_SECRET: ${{ secrets.RAPIDAPI_PROXY_SECRET }} 
